test/failing/duptags3.trunnel

struct x {

   u8 a;
   union u[a] {
     3 : u16 y;
     1..4 : u32 z;
   };
}